force-app/main/default/objects/VI_ServicePayant__c/VI_ServicePayant__c.object-meta.xml
<CustomObject>
    <label>Service payant</label>
    <nameField>
        <displayFormat>SP-{00000}</displayFormat>
        <label>Numéro du service payant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Services payants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>