force-app/main/default/objects/VI_ServicePayant__c/fields/Canal__c.field-meta.xml
<CustomField>
    <fullName>Canal__c</fullName>
    <label>Canal</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pure player</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>