force-app/main/default/objects/VI_ServicePayant__c/fields/VI_NomDuService__c.field-meta.xml
<CustomField>
    <fullName>VI_NomDuService__c</fullName>
    <label>Nom du service</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Assurance facture</fullName>
            </value>
            <value>
                <fullName>Promotion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>