force-app/main/default/objects/VI_ServicePayant__c/fields/VI_Partenaire__c.field-meta.xml
<CustomField>
    <fullName>VI_Partenaire__c</fullName>
    <label>Partenaire</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Merci de sélectionner un compte Partenaire.</errorMessage>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>PartenaireAccountRT</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Services payants</relationshipLabel>
    <relationshipName>Services_payants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>